rating, user detail features added

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,11 +6,11 @@
 
   <!-- <h2>Navigation</h2>
   <ul>
-    <li><a href="./static/data/images/">View all photos</a></li>
-    <li><a href="/users">View all users</a></li>
+    <li><a href="./static/data/images/">View all of my photos</a></li>
+    <li><a href="/my_data">View my data</a></li>
   </ul> -->
   <h2> If you have an account with me, Please login</h2>
-  <form action="/users" method="POST">
+  <form action="/login_user" method="POST">
     <p>
       Email <input type="text" name="email">
     </p>
@@ -23,24 +23,24 @@
       <input type="submit" value="submit">
     </p> </form>
 
-  <h2>If you don't have an account, Please create one. Thanks!</h2>
-  <form action="/users" method="POST">
+  <h2>If you do not have an account, Please Register. Thanks!</h2>
+  <form action="/register_user" method="POST">
     <p>
-      First Name <input type="text" name="fname">
+      First Name <input type="text" name="fname" required>
     </p>
     <p>
-      Last Name <input type="text" name="lname">
+      Last Name <input type="text" name="lname" required>
     </p>
     <p>
-      Email <input type="text" name="email">
-    </p>
-
-    <p>
-      Password <input type="password" name="password">
+      Email <input type="text" name="email"  required>
     </p>
 
     <p>
-      <input type="submit" value="submit">
+      Password <input type="password" name="password" required>
+    </p>
+
+    <p>
+      <input type="submit" value="Register">
     </p>
   </form>
 {% endblock %}
