--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,3 +2,12 @@
     height:200px;
     width:200px
 }
+.button {
+    border: none;
+    color: white;
+    padding: 20px 35 px;
+    text-align: center;
+    display: inline-block;
+    font-size: 18;
+    background-color: green
+}
