--- a/templates/all_photos.html
+++ b/templates/all_photos.html
@@ -3,6 +3,11 @@
 
 {% block body %}
   <h1>All Photos</h1>
+  <h2>Navigation</h2>
+  <ul>
+    <!-- <li><a href="./static/data/images/">View all of my photos</a></li> -->
+    <li><a href="/user_details/{{session['user_id']}}">View my data</a></li>
+  </ul>
 
   <ul>
     {% for photo in photos %}
@@ -12,6 +17,34 @@
           {{ photo.location }}
         </a>
         <!-- {{photo.img_path}} -->
+
+        <!-- <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right" data-content="{{photo.description}}">
+          Popover on right
+        </button> -->
+
+        
+        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel" {{photo.location}}></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body" {{photo.description}}>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <script src="/static/photoClick.js"></script> -->
+
+        
       </li>
     {% endfor %}
   </ul>
