user ratings were added to photos

--- a/templates/all_photos.html
+++ b/templates/all_photos.html
@@ -2,7 +2,7 @@
 {% block title %}All Photos{% endblock %}
 
 {% block body %}
-  <h1>All Photos</h1>
+  <h1> Hello {{user.fname}} {{user.lname}}, Here is my list of Photos</h1>
   <h2>Navigation</h2>
   <ul>
     <!-- <li><a href="./static/data/images/">View all of my photos</a></li> -->
