--- a/templates/display_user_details.html
+++ b/templates/display_user_details.html
@@ -5,12 +5,30 @@
 {% block body %}
 <h1>  Hello {{ user.fname }} {{user.lname}}</h1>
 <br>
+<h2>Navigation</h2>
+
+<ul>
+    <li><a href="/all_photos">View all of my photos</a></li>
+</ul>
+<br>
 <h2> Here are your favorite photos</h2>
 <ul>
     {%for photo in user_fav_photos %}
         <li>
             <a href="/all_photos/{{ photo.photo_id }}">
                 <img class="smallImage" src="/static/{{photo.img_path}}">
+
+                <form>
+                    <!-- <p>For more details, click on these links</p> -->
+                    <br>
+                    <br>
+                    <a href="{{photo.gps_url}}" target="_blank">{{photo.location}} - Popular link</a>
+                    <br>
+                    <br>
+                    <a href="{{photo.popular_url}}" target="_blank">{{photo.location}} - Popular link</a>
+                    <br>
+                    <br>
+                </form>
             </a>
         </li>
     {% endfor %}
@@ -32,11 +50,4 @@
     
 </ul>
 
-<h2>Navigation</h2>
-
-<ul>
-    <li><a href="/all_photos">View all of my photos</a></li>
-</ul>
-
-  
 {% endblock %}
