Ajax, Js, jquery feature complete

--- a/templates/stats_photo.html
+++ b/templates/stats_photo.html
@@ -15,27 +15,24 @@
 </script>
 
     <body>
-        <h1>This is stats on the photo</h1>
-        <div id='img_details_div'>
+      <h1>The statistics on the photo</h1>
+      <div id='img_details_div'></div>
+      <br>
+      <div id='gps_url_div'></div>
+      <br>
+      <div id='popular_url_div'></div>
             
-        </div>
-        <div id='users_with_ratings_details_div'>
-        </div>
-
-        <h2> This photo is rated by the following users</h2>
-        <br>
-
-        <div id = "count">Number of users who liked this photo are:
-          
-        </div>
         
-        <p>
-            <button id="users_who_have_rated_photo" class="btn btn-primary">Get users</button>
-        </p>
-        <div id = "count_who_rated_photo"></div>
+
+      <div id = 'count'> </div>
+      
+      <div id='users_details_div'></div>
+        
+        
+        
         
       <div id='test_div'></div>  
 
-    <script src="/static/photoClick.js"></script>
-  </body>
+      <script src="/static/photoClick.js"></script>
+    </body>
 </html>
