all MVPs completed

--- a/templates/stats_photo.html
+++ b/templates/stats_photo.html
@@ -10,7 +10,10 @@
       crossorigin="anonymous">
     </script>
 
-
+  <h2>Navigation</h2>
+    <ul>
+      <li><a href="/all_photos">View all of my photos</a></li>
+    </ul>
 
 </script>
 
@@ -22,8 +25,6 @@
       <br>
       <div id='popular_url_div'></div>
             
-        
-
       <div id = 'count'> </div>
       
       <div id='users_details_div'></div>
