google maps working for a test file

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
 {% block title %}Photo Viewing  Home{% endblock %}
 
 {% block body %}
-  <h1>Hello! Welcome to Durga's homepage</h1>
+  <h1>Hello! Welcome to Durga's Photos Viewing</h1>
 
   <!-- <h2>Navigation</h2>
   <ul>
@@ -20,7 +20,7 @@
     </p>
 
     <p>
-      <input type="submit" value="submit">
+      <input type="submit" value="Login">
     </p> </form>
 
   <h2>If you do not have an account, Please Register. Thanks!</h2>
