--- a/templates/stats_photo.html
+++ b/templates/stats_photo.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>photoClick – JavaScript</title>
+    <style>
+      #map{
+          height: 400px;
+          width: 50%;
+      }
+  </style>
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
@@ -28,12 +34,16 @@
       <div id = 'count'> </div>
       
       <div id='users_details_div'></div>
-        
-        
-        
-        
-      <div id='test_div'></div>  
 
-      <script src="/static/photoClick.js"></script>
+      <div id="map"></div>
+        
+    <script src="/static/photoClick.js"></script>
+    <script src="/static/mapsScript.js"></script>
+    </script>
+    <script defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCe01Xbvf5tSBwKnx0nJo7OdS1sLQN1el0&callback=initMap">
+    </script>
+
+      
     </body>
 </html>
