--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,13 @@
     {% block head %}{% endblock %}
   </head>
   <body>
+    
+    <form action= "/logout_user" method = "POST">
+      <p>
+      <input type="submit" value="Sign out">
+    </p>
+    </form>
+
     {% for msg in get_flashed_messages() %}
       <p class="flash-msg">
         {{ msg }}
@@ -20,5 +27,7 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
+
+    
   </body>
 </html>
