--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@
     <li><a href="./static/data/images/">View all of my photos</a></li>
     <li><a href="/my_data">View my data</a></li>
   </ul> -->
-  <h2> If you have an account with me, Please login</h2>
+  <h2> If you have an account with me, Please sign in</h2>
   <form action="/login_user" method="POST">
     <p>
       Email <input type="text" name="email">
@@ -20,8 +20,9 @@
     </p>
 
     <p>
-      <input type="submit" value="Login">
+      <input type="submit" value="Sign in">
     </p> </form>
+
 
   <h2>If you do not have an account, Please Register. Thanks!</h2>
   <form action="/register_user" method="POST">
