--- a/templates/stats_photo.html
+++ b/templates/stats_photo.html
@@ -36,11 +36,13 @@
       <div id='users_details_div'></div>
 
       <div id="map"></div>
+
+      <div id="test_div"></div>
         
     <script src="/static/photoClick.js"></script>
     <script src="/static/mapsScript.js"></script>
     </script>
-    <script defer
+    <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCe01Xbvf5tSBwKnx0nJo7OdS1sLQN1el0&callback=initMap">
     </script>
 
