All features work

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,10 @@
-.smallImage{
+.smallImage {
     height:200px;
     width:200px
+}
+.mediumImage {
+    height: 300px;
+    width: 400px
 }
 .button {
     border: none;
