--- a/templates/all_photos.html
+++ b/templates/all_photos.html
@@ -9,18 +9,19 @@
     <li><a href="/user_details/{{session['user_id']}}">View my data</a></li>
   </ul>
     
-  <form action= "/logout_user" method = "POST">
+  <!-- <form action= "/logout_user" method = "POST">
     <p>
     <input type="submit" value="Sign out">
   </p>
-  </form>
+  </form> -->
     
   
   <ul>
     {% for photo in photos %}
       <li>
         <a href="/all_photos/{{ photo.photo_id }}">
-          <img class="smallImage" src="/static/{{photo.img_path}}">
+          <!-- <img class="smallImage" src="/static/{{photo.img_path}}"> -->
+          <img class="mediumImage" src="/static/{{photo.img_path}}">
           {{ photo.location }}
         </a>
         <!-- {{photo.img_path}} -->
