--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-{% block title %}Photo Viewing  Home{% endblock %}
+{% extends 'base1.html' %} -->
+{% block title %} Photo Viewing  Home {% endblock %} 
 
 {% block body %}
   <h1>Hello! Welcome to Durga's Photos Viewing</h1>
@@ -9,7 +9,7 @@
     <li><a href="./static/data/images/">View all of my photos</a></li>
     <li><a href="/my_data">View my data</a></li>
   </ul> -->
-  <h2> If you have an account with me, Please sign in</h2>
+  <!-- <h2> If you have an account with me, Please sign in</h2> -->
   <form action="/login_user" method="POST">
     <p>
       Email <input type="text" name="email">
