--- a/templates/stats_photo.html
+++ b/templates/stats_photo.html
@@ -26,10 +26,13 @@
     <body>
       <h1>The statistics on the photo</h1>
       <div id='img_details_div'></div>
-      <br>
+      <!-- <br>
       <div id='gps_url_div'></div>
-      <br>
+      <br> -->
+      <div id='break_div'></div>
+      <form>
       <div id='popular_url_div'></div>
+      </form>
             
       <div id = 'count'> </div>
       
@@ -37,7 +40,7 @@
 
       <div id="map"></div>
 
-      <div id="test_div"></div>
+      <!-- <div id="test_div"></div> -->
         
     <script src="/static/photoClick.js"></script>
     <script src="/static/mapsScript.js"></script>
