all pages done with bootstrap except stats page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,3 +31,17 @@ h2, h3 {
 h1 {
     color: Black
 }
+
+textarea {
+    font-size: .8rem;
+    letter-spacing: 1px;
+    width: 250px;
+    height:250px
+}
+textarea {
+    padding: 10px;
+    line-height: 1.5;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #999;
+}
